Код откорректирован  с учетом замечаний